kubernetes/apps/base/tempvm/tempvm/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempvm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tempvm
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - port: ssh
          protocol: TCP
        - port: health
          protocol: TCP
